syntax = "proto3";
package gov.hhs.aspr.ms.taskit.protobuf;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.taskit.protobuf.objects";

import "google/type/date.proto";
import "google/protobuf/any.proto";

message WrapperEnumValue {
    string enumTypeUrl = 1;
    string value = 2;
}

message TaskitObjectInput {
    optional google.protobuf.Any mVal = 1;
    optional int32 i32Val = 2;
    optional double dVal = 3;
    optional bool bVal = 4;
    optional float fVal = 5;
    optional int64 i64Val = 6;
    optional string sVal = 7;
    optional google.type.Date dateVal = 8;
    optional WrapperEnumValue enumVal = 9;
}